fixed spacing error

--- a/frontend/social-bites/src/Settings/SettingsCategories/EditAccountStyle.css
+++ b/frontend/social-bites/src/Settings/SettingsCategories/EditAccountStyle.css
@@ -1,5 +1,5 @@
 .entire-edit-page {
-    width: 75%;
+    width: 85vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,15 +11,13 @@ input {
     border: solid;
     border-width: 2px;
     border-color: grey;
-    padding: 10px 5px 10px 5px;
+    padding: 10px 25px 10px 25px;
     border-radius: 1em;
 }
 
 label {
     font-size: 25px;
 }
-
-
 
 .edit-info-form {
     display: flex;
